test/corpus/complex-types.txt
==============
Complex types
==============

#(2,3) => complex cmp; //cmp is now 2 + 3i 

#(5, -1.5) => complex cmp; // cmp is 5 - 1.5i
#(2,3) + #(5,6) + cmp => complex sum; // sum is now 12 + 7.5i

#(2.0,3.5) => complex cmp;
cmp.re => float x; // x is 2.0
cmp.im => float y; //y is 3.5

%(2, .5*pi) => polar pol; // pol is 2∠.5π

// %(2, .5*pi) => polar pol;
// pol.mag => float m; // m is 2
// pol.phase => float p; //p is .5π

// %(2, .5*pi) => polar pol;
// #(3, 4) => complex cmp;
// pol $ complex + #(10, 3) + cmp => complex cmp2;
// cmp $ polar + %(10, .25*pi) - pol => polar pol2;

---

(source_file
  (chuck_operation
    (complex
      (number)
      (number))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (chuck_operation
    (complex
      (number)
      (number))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (chuck_operation
    (operation
      (complex
        (number)
        (number))
      (operator)
      (complex
        (number)
        (number))
      (operator)
      (variable))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (chuck_operation
    (complex
      (number)
      (number))
    (variable_declaration
      (type)
      (variable)))
  (chuck_operation
    (member_identifier
      (variable)
      (variable))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (chuck_operation
    (member_identifier
      (variable)
      (variable))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (chuck_operation
    (polar
      (number)
      (operation
        (number)
        (operator)
        (constant)))
    (variable_declaration
      (type)
      (variable)))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))
