test/corpus/control-structures/repeat.txt
======
Repeat
======

// repeat loop
repeat( 4 )
{
    // print now in seconds
    <<< now / second >>>;
    // advance time
    500::ms => now;
}

---

(source_file
  (comment)
  (loop
    (int)
    (block
      (comment)
      (debug_print
        (binary_expression
          (keyword)
          (operator)
          (keyword
            (duration_identifier))))
      (comment)
      (chuck_operation
        (dur
          (int)
          (duration_identifier))
        (keyword)))))

================
Repeat condition
================

// variable
5 => int x;

// in the repeat condition, 'x' is evaluated once and only once, at
// the start of the loop; if the value of x is updated subsequently,
// it will not alter the number of repetitions
repeat( x )
{
    // print now in seconds
    <<< now / second >>>;
    // advance time
    500::ms => now;
}

---

(source_file
  (comment)
  (chuck_operation
    (int)
    (variable_declaration
      (primitive_type)
      (variable_identifier)))
  (comment)
  (comment)
  (comment)
  (loop
    (variable_identifier)
    (block
      (comment)
      (debug_print
        (binary_expression
          (keyword)
          (operator)
          (keyword
            (duration_identifier))))
      (comment)
      (chuck_operation
        (dur
          (int)
          (duration_identifier))
        (keyword)))))
