test/corpus/events/osc-events.txt
==========
OSC events
==========

// create our OSC receiver
OscRecv orec;
// port 6449
6449 => orec.port;
// start listening (launch thread)
orec.listen();

function void rate_control_shred()
{ 
    // create an address in the receiver 
    // and store it in a new variable.
    orec.event("/sndbuf/buf/rate,f") @=> OscEvent rate_event; 

    while ( true )
    { 
        rate_event => now; // wait for events to arrive.

        // grab the next message from the queue. 
        while( rate_event.nextMsg() != 0 )
        { 
            // getFloat fetches the expected float
            // as indicated in the type string ",f"
            buf.play( rate_event.getFloat() );
            0 => buf.pos;
        }
    }       
}

---

(source_file
  (comment)
  (statement
    (variable_declaration
      (class_identifier)
      (variable_identifier)))
  (comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (function_call
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (function_definition
    (primitive_type)
    (variable_identifier)
    (block
      (comment)
      (comment)
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier))
            (string))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier))))
      (loop
        (keyword)
        (block
          (statement
            (chuck_operation
              (variable_identifier)
              (chuck_operator)
              (keyword)))
          (comment)
          (comment)
          (loop
            (binary_expression
              (function_call
                (member_identifier
                  (variable_identifier)
                  (variable_identifier)))
              (operator)
              (int))
            (block
              (comment)
              (comment)
              (statement
                (function_call
                  (member_identifier
                    (variable_identifier)
                    (variable_identifier))
                  (function_call
                    (member_identifier
                      (variable_identifier)
                      (variable_identifier)))))
              (statement
                (chuck_operation
                  (int)
                  (chuck_operator)
                  (member_identifier
                    (variable_identifier)
                    (variable_identifier)))))))))))
